# med-rag

./: .gitignore  COMPREHENSIVE_REPORT.md  DEPLOYMENT.md  Dockerfile  IMPROVEMENT_PLAN.md  Makefile  PROJECT_REPORT.md  SOTA_IMPLEMENTATION_SUMMARY.md  build_index.py  config.py  docker-compose.yml  generate_evaluation_chart.py  init.md  main.py  pyproject.toml  run_evaluation.py  run_ragas_evaluation.py  run_sota_evaluation.py  run_sota_evaluation2.py  setup_cloud_gpu.sh
.streamlit/: config.toml
data/: evaluation_report.json  evaluation_report.md  evaluation_summary.md  medical_qa_dataset.json  medical_qa_dataset_expanded.json  sota_evaluation_report.json
doc/: 01_introduction.md  02_requirements_analysis.md  03_system_design.md  04_system_implementation.md  05_conclusion.md
doc/en/: 01_introduction.md  02_requirements_analysis.md  03_system_design.md  04_system_implementation.md  05_conclusion.md
scripts/: expand_dataset.py  health_check.sh  smoke_test.py
src/: __init__.py
src/data/: __init__.py  dataset_loader.py  dynamic_chunker.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  ragas_evaluator.py  visualizer.py
src/knowledge/: __init__.py  embedding_model.py  faiss_index.py
src/pipeline/: __init__.py  agentic_graph_rag.py  chat_engine.py  citation_tracker.py  citation_verifier.py  confidence_scorer.py  discrepancy_refiner.py  hybrid_retriever.py  multi_source_retriever.py  patient_data_structurer.py  query_decomposer.py  reranker.py  self_rag.py  sota_chat_engine.py
src/ui/: app.py
