[project]
name = "med-rag"
version = "0.1.0"
description = "Medical RAG System with Hybrid Retrieval and Advanced Reranking"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-gpu>=1.7.4",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-vector-stores-faiss>=0.1.0",
    "streamlit>=1.28.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "datasets>=2.14.0",
    "ollama>=0.1.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
